fixes in API and its docs
